<resources>
    <string name="app_name">Hash Vault</string>
    <string name="enter_text">Enter text</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="md5">MD5</string>
    <string name="hash_text">Hash will appear here</string>
    <string name="copy">Copy</string>
    <string name="sha_1">SHA-1</string>
    <string name="sha_256">SHA-256</string>
    <string name="sha_384">SHA-384</string>
    <string name="sha_512">SHA-512</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="compare_hash">Compare hash</string>
    <string name="compare">Compare</string>
    <string name="match_text">✓ Match</string>
    <string name="no_match_text">✗ No Match</string>
    <string name="export_hashes">Export to File</string>
    <string name="text_hash">Text Hash</string>
    <string name="file_hash">File Hash</string>
    <string name="select_file">Select File</string>
    <string name="no_file_selected">No file selected</string>
    <string name="select_algorithm">Select Algorithm</string>
    <string name="generate_file_hash">Generate Hash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>